namespace WormsFinder.FilesManage;

public class FileParser
{
}