@startuml

class InputHandler {
 +GetInput() : string
}

class DirectoryScanner {
 +ScanDirectory(directoryPath : string) : List<File>
}

class FileParser {
 +ParseFile(file : File) : ParsedData
}

class SuspiciousFileDetector {
 +IsFileSuspicious(parsedData : ParsedData) : bool
}

class OutputHandler {
 +DisplayResult(file : File, isSuspicious : bool) : void
}

InputHandler --> DirectoryScanner
DirectoryScanner --> FileParser
FileParser --> SuspiciousFileDetector
SuspiciousFileDetector --> OutputHandler

@enduml